Changelog for nautilus-image-manipulator

================================
1.3 - 201X-XX-XX (rYYY)
  * "Port" to GTK+ 3 (actually, just updated the ui file to be able to open
    with Glade for GTK+ 3)
  * Added Slovak translation (thanks Prescott_SK)
  * Added incomplete Russian translation (thanks Eugene Marshal)

================================
1.2 - 2013-02-18 (r199)
  * Fix uploading to 1fichier.com (LP #1100027)
  * Fix issue where width/height manually specified in the profile would result
      in a crash (LP #1030927)
  * Use GExiv2 instead of pyexiv2 (LP #1074028)
  * Added German translation

================================
1.1 - 2012-04-30 (r187)
  * Better management of profiles. In particular, make sure that there are
      no profiles that have the same name.

================================
1.0 - 2012-04-17 (r165)
  * Major change: completely redesigned user interface. Now the parameters
      that determine how the images are to be resized are set via profiles.
      A set of default profiles is provided, but the user can freely add or
      remove profiles. The focus of this new UI is a very simplified and
      streamlined user experience. We try to limit the technical jargon to
      a minimum ;) (LP #936003)
  * Prevent Nautilus from freezing when Nautilus Image Manipulator is
      launched (LP #931762)
  * Move the config file to ~/.config/nautilus-image-manipulator/config
      (LP #935738)
  * Started writing "proper" documentation (LP #962443)
      see http://nautilus-image-manipulator.readthedocs.org/
  * Started writing unit tests with nose (LP #946610)

================================
0.8 - 2012-02-14 (r139)
  * Force .jpg extension on resized images filenames (LP #931975)

================================
0.7 - 2012-02-14 (r132)
  * N I M now depends on the pil and pyexiv2 packages, and not anymore on
      ImageMagick:
    - Use the Python Imaging Library (PIL) instead of ImageMagick to resize